Anticor Algorithm.ipynb

--- a/Anticor Algorithm.ipynb
+++ b/Anticor Algorithm.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **CFRM 523 Strategy Project**\n"
+        "# **Anticor Algorithm**\n"
       ],
       "metadata": {
         "id": "lZPZ6oA7kjdX"
